--- a/LinkSharedBlazor/LinkSharedBlazor.csproj
+++ b/LinkSharedBlazor/LinkSharedBlazor.csproj
@@ -19,4 +19,9 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Components\FullLinkComponent\" />
+    <Folder Include="Components\SocialComponent\" />
+  </ItemGroup>
+
 </Project>
