--- a/LinkSharedBlazor/appsettings.json
+++ b/LinkSharedBlazor/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    //"DefaultConnection": "Data Source=DESKTOP-5IUOUFD\\SQLEXPRESS;Initial Catalog=LinkShared;Integrated Security=True",
-    "DefaultConnection": "Host=localhost;Port=5432;Database=LinkShared;Username=postgres;Password=postgres",
+    "DefaultConnection": "Data Source=DESKTOP-H22Q1GC\\SQLEXPRESS;Initial Catalog=LinkShared;Integrated Security=True",
+    //"DefaultConnection": "Host=localhost;Port=5432;Database=LinkShared;Username=postgres;Password=postgres",
     "sqlServer": "Server=(localdb)\\mssqllocaldb;Database=LinkShared;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
