sua giao dien link

--- a/LinkSharedBlazor/appsettings.json
+++ b/LinkSharedBlazor/appsettings.json
@@ -1,9 +1,9 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-H22Q1GC\\SQLEXPRESS;Initial Catalog=LinkShared;Integrated Security=True",
-    //"DefaultConnection": "Host=localhost;Port=5432;Database=LinkShared;Username=postgres;Password=postgres",
-    "sqlServer": "Server=(localdb)\\mssqllocaldb;Database=LinkShared;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=DESKTOP-U2Q65UT\\SQLEXPRESS;Initial Catalog=linkShared;Integrated Security=True",
+        //"DefaultConnection": "Host=localhost;Port=5432;Database=LinkShared;Username=postgres;Password=postgres",
+        "sqlServer": "Server=DESKTOP-U2Q65UT\\SQLEXPRESS;Database=LinkShared;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
