--- a/LinkSharedBlazor/LinkSharedBlazor.csproj
+++ b/LinkSharedBlazor/LinkSharedBlazor.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <Folder Include="Components\FullLinkComponent\" />
     <Folder Include="Components\SocialComponent\" />
+    <Folder Include="wwwroot\Icon\" />
   </ItemGroup>
 
 </Project>
