--- a/LinkSharedBlazor/appsettings.json
+++ b/LinkSharedBlazor/appsettings.json
@@ -1,7 +1,7 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Data Source=DESKTOP-U2Q65UT\\SQLEXPRESS;Initial Catalog=linkShared;Integrated Security=True",
-        //"DefaultConnection": "Host=localhost;Port=5432;Database=LinkShared;Username=postgres;Password=postgres",
+        //"DefaultConnection": "Data Source=DESKTOP-U2Q65UT\\SQLEXPRESS;Initial Catalog=linkShared;Integrated Security=True",
+        "DefaultConnection": "Host=localhost;Port=5432;Database=LinkShared;Username=postgres;Password=postgres",
         "sqlServer": "Server=DESKTOP-U2Q65UT\\SQLEXPRESS;Database=LinkShared;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
   "Logging": {
